<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_showStats"
        android:orderInCategory="100"
        android:title="@string/show_statistics"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_report_black_24dp"
        />

    <item
        android:id="@+id/menu_startResumeMovement"
        android:orderInCategory="100"
        android:title="@string/start_movement_tracking"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_play_circle_outline_black_24dp"
        />

    <item
        android:id="@+id/menu_stopMovement"
        android:orderInCategory="100"
        android:title="@string/pause_movement_tracking"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_pause_circle_outline_black_24dp"
        />

    <item
        android:id="@+id/menu_save_recording"
        android:orderInCategory="100"
        android:title="@string/save_recording"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_share"
        />

    <item
        android:id="@+id/menu_reset_drill"
        android:orderInCategory="100"
        android:title="Restart drill"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_revert"
        />
</menu>