<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:hint="@string/first_name"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:spinnerMode="dropdown" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/height"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>